package(default_visibility = ["//visibility:public"])

exports_files(["config/config.hpp.in", "config/version.hpp.in"])

cc_library(
    name = "bsoncxx_hdrs",
    strip_include_prefix = "/src",
    includes = ["."],
    hdrs = glob(["*.hpp"]),
    defines = ["BSONCXX_STATIC"],
    deps = [
        "@bsoncxx_config//:bsoncxx_config",
        "@bsoncxx_config//:bsoncxx_version",
        "@bazelregistry_mongo_c_driver//:libbson",
    ],
)

cc_library(
    name = "bsoncxx_private_hdrs",
    strip_include_prefix = "/src",
    includes = ["."],
    defines = ["BSONCXX_STATIC"],
    hdrs = ["test_util/export_for_testing.hh"] + glob([
        "array/**/*.hpp",
        "builder/**/*.hpp",
        "config/**/*.hpp",
        "config/**/*.hh",
        "document/**/*.hpp",
        "enums/**/*.hpp",
        "exception/**/*.hpp",
        "private/**/*.hh",
        "stdx/**/*.hpp",
        "string/**/*.hpp",
        "types/**/*.hpp",
        "types/**/*.hh",
        "util/**/*.hpp",
    ]),
)

cc_library(
    name = "bsoncxx",
    defines = ["BSONCXX_STATIC"],
    srcs = glob([
        "*.cpp",
        "array/**/*.cpp",
        "builder/**/*.cpp",
        "config/**/*.cpp",
        "document/**/*.cpp",
        "enums/**/*.cpp",
        "exception/**/*.cpp",
        "private/**/*.cpp",
        "stdx/**/*.cpp",
        "string/**/*.cpp",
        "types/**/*.cpp",
        "util/**/*.cpp",
    ]),
    deps = [
        ":bsoncxx_hdrs",
        ":bsoncxx_private_hdrs",
    ],
)
